# AutoTrade-A

./: .drone.yml  .env.example  .gitignore  Dockerfile  Makefile  README.md  check_cache.py  debug_config.py  main.py  pyproject.toml  test.py  test_alternatives.py  test_industry.py  verify_data_source.py
artifacts/models/lightgbm_rolling_20260118_233709/: model.pkl
autotrade/: __init__.py  trade_manager.py  web_server.py
autotrade/backtest/: engine.py
autotrade/backtesting/: engine.py
autotrade/common/: data_loader.py  logger.py  paths.py
autotrade/common/config/: __init__.py  loader.py
autotrade/config/: loader.py
autotrade/core/: __init__.py  signal_generator.py
autotrade/data/: news.py  providers.py  qlib_adapter.py
autotrade/execution/brokers/: __init__.py
autotrade/execution/strategies/: __init__.py  qlib_ml_strategy.py
autotrade/features/: price_action.py  qlib_features.py  smc.py
autotrade/models/: model_manager.py  trainer.py
autotrade/research/backtest/: __init__.py
autotrade/research/data/: __init__.py  cache.py  providers.py  qlib_adapter.py
autotrade/research/features/: __init__.py  qlib_features.py
autotrade/research/features/alpha/: __init__.py
autotrade/research/models/: __init__.py  model_manager.py  trainer.py
autotrade/shared/config/: loader.py  qlib_config.py  settings.py
autotrade/shared/utils/: __init__.py
autotrade/strategies/: signal_generator.py
autotrade/ui/static/: utils.js
autotrade/ui/templates/: backtest.html  data_center.html  index.html  layout.html  models.html  news.html
configs/: qlib_ml_config.yaml  universe.yaml
docs/: workflow.md
models/: .current_model
models/lightgbm_20260118_022639/: metadata.json  model.pkl
models/lightgbm_rolling_20260118_023257/: metadata.json  model.pkl
models/lightgbm_rolling_20260118_031200/: metadata.json
models/lightgbm_rolling_20260118_230317/: metadata.json  model.pkl
models/lightgbm_rolling_20260118_230328/: metadata.json
models/lightgbm_rolling_20260118_233146/: metadata.json  model.pkl
models/lightgbm_rolling_20260118_233709/: metadata.json
models/lightgbm_rolling_20260119_134628/: metadata.json  model.pkl
models/lightgbm_rolling_20260119_143357/: metadata.json  model.pkl
models/lightgbm_rolling_20260119_150345/: metadata.json  model.pkl
models/lightgbm_rolling_20260119_151503/: metadata.json
models/lightgbm_rolling_20260119_153318/: metadata.json  model.pkl
models/lightgbm_rolling_20260119_225911/: metadata.json  model.pkl
models/lightgbm_rolling_20260120_102223/: metadata.json  model.pkl
models/lightgbm_rolling_20260120_112656/: metadata.json  model.pkl
models/lightgbm_rolling_20260120_112928/: metadata.json
models/lightgbm_rolling_20260120_114010/: metadata.json  model.pkl
models/lightgbm_rolling_20260120_131631/: metadata.json  model.pkl
models/lightgbm_rolling_20260120_150005/: model.pkl
notebooks/: qlib_ml_training_example.ipynb
openspec/: project.md
openspec/changes/add-a-stock-support/: design.md  proposal.md  tasks.md
openspec/changes/add-a-stock-support/specs/a-stock-backtesting/: spec.md
openspec/changes/add-a-stock-support/specs/a-stock-data-provider/: spec.md
openspec/changes/add-a-stock-support/specs/multi-market-ui/: spec.md
openspec/changes/archive/2026-01-17-implement-mvp-with-ui/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-17-scaffold-project-structure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-18-add-qlib-ml-strategy/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-18-merge-training-modes/: proposal.md  tasks.md
openspec/changes/archive/2026-01-18-replace-yfinance-with-alpaca/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-19-cache-akshare-data/: design.md  tasks.md
openspec/changes/cache-akshare-data/: proposal.md
openspec/changes/cache-akshare-data/specs/cache-logic/: spec.md
openspec/changes/optimize-structure/: design.md  proposal.md  tasks.md
openspec/changes/optimize-structure/specs/project-structure/: spec.md
openspec/changes/remove-us-stock-add-a-share/: design.md  proposal.md  tasks.md
openspec/changes/remove-us-stock-add-a-share/specs/a-share-support/: spec.md
openspec/changes/replace-lumibot-with-qlib/: design.md  proposal.md  tasks.md
openspec/changes/replace-lumibot-with-qlib/specs/qlib-ml-strategy/: spec.md
openspec/changes/replace-lumibot-with-vectorbt/: design.md  proposal.md  tasks.md
openspec/changes/replace-lumibot-with-vectorbt/specs/backtesting-engine/: spec.md
openspec/changes/restructure-project/: design.md  proposal.md  tasks.md
openspec/changes/restructure-project/specs/backtesting/: spec.md
openspec/changes/restructure-project/specs/prediction/: spec.md
openspec/specs/cache-logic/: spec.md
openspec/specs/data-provider/: spec.md
openspec/specs/mvp-features/: spec.md
openspec/specs/project-infrastructure/: spec.md
openspec/specs/qlib-ml-strategy/: spec.md
openspec/specs/structure/: spec.md
outputs/models/: .current_model
outputs/models/lgw_2026-01-20_16-26-01/: metadata.json
outputs/models/lightgbm_2026-01-20_15-47-02/: metadata.json  model.pkl
outputs/models/lightgbm_rolling_2026-01-20_15-43-13/: metadata.json
outputs/models/lightgbm_rolling_20260120_150005/: metadata.json
outputs/models/lightgbm_rolling_20260120_151820/: metadata.json
scripts/: init_a_stock_data.py  init_qlib_data.py  train_model.py
tests/: conftest.py  test_akshare_provider.py  test_qlib_ml.py
(+5 files in other folders)
