[project]
name = "autotrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 金融量化与交易
    "pyqlib",                    # 量化金融库
    "vectorbt",                  # 向量化回测框架
    # 机器学习框架
    "lightgbm",                  # LightGBM 梯度提升
    # 数据处理与科学计算
    "pandas>=2.3.3",             # 数据分析库
    "pyarrow>=22.0.0",           # 列式存储格式
    "scipy>=1.17.0",             # 科学计算库
    "statsmodels>=0.14.0",       # 统计模型 (PyQlib 依赖)
    "scikit-learn>=1.8.0",       # 机器学习工具库 (PyQlib 依赖)
    # 可视化与Web界面
    "websockets>=12.0",          # WebSocket 通信
    "fastapi>=0.115.0",          # Web UI 框架
    "uvicorn>=0.30.0",           # ASGI 服务器
    "jinja2>=3.1.6",
    # 工具库
    "python-dotenv>=1.2.1",      # 环境变量管理
    "loguru>=0.7.3",             # 日志库
    "pyyaml>=6.0.3",
    # A股数据源
    "akshare>=1.12.0",           # A股历史行情数据
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.ruff]
# 行长度限制（与 Black 兼容）
line-length = 88
# 目标 Python 版本
target-version = "py311"
# 扫描的文件扩展名
include = ["*.py", "*.pyi", "**/pyproject.toml"]
# 排除目录
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
# 忽略的规则
ignore = [
    "E501",   # 行过长（由 formatter 处理）
    "B008",   # 函数调用作为默认参数（FastAPI 常用）
    "C901",   # 复杂度检查
]
# 允许自动修复的规则
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 缩进样式
indent-style = "space"
# 保留魔法尾随逗号
skip-magic-trailing-comma = false
# 自动识别行结束符
line-ending = "auto"

[tool.ruff.lint.isort]
# isort 配置
known-first-party = ["autotrade"]
force-single-line = false
lines-after-imports = 2
